Add @media navbar padding and box model

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 <div class="container-fluid">
 
-    <h1 class="title-heading">Ahoj, som Martin,</h1>
-    <p class="section-p">organista.</p>
+    <h1 class="title-heading">Ahoj! <br>som Martin, organista.</h1>
+    <!-- <p class="title-p">organista.</p> -->
 
   </div>
 
@@ -121,7 +121,7 @@
             <td>Ú, Z</td>
           </tr>
           <tr>
-            <td>Svadobný pochod <a class="far fa-play-circle" href="https://www.youtube.com/watch?v=P6rX3wlDsVI"></a></td>
+            <td><a class="far fa-play-circle" href="https://www.youtube.com/watch?v=P6rX3wlDsVI" target="_blank"></a> Svadobný pochod</td>
             <td>Mendelssohn-Bartholdy</td>
             <td>Ú, Z</td>
           </tr>
