Add pipe-organ image.

--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
   </nav>
 
 <div class="container-fluid">
+  <div class="top-container">
 
     <h1 class="title-heading">Ahoj! <br>som Martin, organista.</h1>
     <!-- <p class="title-p">organista.</p> -->
-
+    <img class="pipe-organ-image top-container" src="images/pipe-organ-vector.png">
   </div>
+
+</div>
 
 
   </section>
