--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <h1 class="title-heading">Ahoj! <br>som Martin, organista.</h1>
     <!-- <p class="title-p">organista.</p> -->
-    <img class="pipe-organ-image top-container" src="images/pipe-organ-vector.png">
+    <!-- <img class="pipe-organ-image" src="images/pipe-organ-vector.png"> -->
   </div>
 
 </div>
