--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   <!-- Favicon   -->
   <link rel="icon" href="images/favicon.ico">
 
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/7d6fbde894.js"></script>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
+
 
   <!-- CSS StyleSheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/7d6fbde894.js"></script>
+
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 
 
   <title>Martin Ilko</title>
@@ -67,8 +70,7 @@
     <div class="container-fluid">
       <div class="top-container">
 
-        <h1 class="title-heading">Ahoj! <br>som Martin, organista.</h1>
-        <!-- <p class="title-p">organista.</p> -->
+        <h1 class="title-heading">Ahoj!<br>som Martin,<br>organista.</h1>
       </div>
 
     </div>
@@ -83,8 +85,8 @@
       <article class="">
         <img class="pipe-organ-image" src="images/pipe-organ-square.png">
         <h2 class="section-heading">O mne</h2>
-        <p class="section-p">Organu sa venujem od svojích 14 rokov. Študoval som (v DK?) na Katolíckej univerzite v Ružomberku, kde som získal veľa cenných skúsensotí a po ukončení štúdia aj magisterský titul v obore cirkevná hudba. Od roku 2017
-          pôsobím ako farský / domovský / organista v kostole (slovenskej rímsko-katolíckej farnosti) sv. Jindřicha v Prahe.</p>
+        <p class="section-p">Organu sa venujem od svojích 14 rokov. Študoval som na Katolíckej univerzite v Ružomberku, kde som získal veľa cenných skúseností a po ukončení štúdia aj magisterský titul v obore cirkevná hudba. Od roku 2017
+          pôsobím ako farský organista a zbormajster farského spevokolu <em>Cantus Gratus</em> pri kostole slovenskej rímsko-katolíckej farnosti sv. Jindřicha v Prahe.</p>
       </article>
   </section>
   </div>
@@ -96,7 +98,7 @@
 
     <div class="container-fluid">
       <h2 class="section-heading">Repertoár</h2>
-      <p class="section-p">Tu mozeme najst nejaky standardny repec. Naucit sa nieco nove nie je problem. Avsak vyber taky aby zodpovedal dostojnosti priestoru</p>
+      <p class="section-p">Nižšie uvedené skladby patria k najviac hraným na svadobných obradoch. V prípade záujmu je možné sa na repertoári dohodnúť, nie je problém naštudovať akúkoľvek skladbu; avšak za predpokladu, že výber zodpovedá dôstojnosti priestoru.</p>
 
         <ul class="repertoire-list">
           <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫</a> Autumn (Vivaldi)</li>
@@ -120,7 +122,7 @@
   <section id="contact">
     <article class="container-fluid">
       <h2 class="section-heading">Nejaký nadpis</h2>
-      <p class="section-p">tu mozno nejaky text o kontakte, ako si objednat ("vystupenie"), koho a tak...prip mozme aj prehodit s tabulkou (sekciou repertoar)</p>
+      <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, v prípade záujmu ma prosím kontaktujte.</p>
       <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg">CONTACT ME</a>
     </article>
   </section>
