Nejaky nadpis -> Kontakt.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <section id="contact">
     <article class="container-fluid">
-      <h2 class="section-heading">Nejaký nadpis</h2>
+      <h2 class="section-heading">Kontakt</h2>
       <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, v prípade záujmu ma prosím kontaktujte.</p>
       <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg">CONTACT ME</a>
     </article>
