--- a/index.html
+++ b/index.html
@@ -123,20 +123,21 @@
     <article class="container-fluid">
       <h2 class="section-heading">Kontakt</h2>
       <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, v prípade záujmu ma prosím kontaktujte.</p>
-      <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg">CONTACT ME</a>
+      <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg shadow-none">CONTACT ME</a>
     </article>
   </section>
 
 
   <footer id="footer">
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMartinIlkoOfficial%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+      width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
     <div class="social-media">
       <a class="social-icon fab fa-facebook-f" href="https://www.facebook.com/MartinIlkoOfficial/" target="_blank"></a>
       <a class="social-icon fab fa-youtube" href="https://www.youtube.com/martinilko" target="_blank"></a>
       <a class="social-icon fas fa-envelope" href="mailto:martin.ilko@gmail.com" target="_blank"></a>
       <a class="social-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/martin-ilko-a6a435168/" target="_blank"></a>
     </div>
-    <!-- <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMartinIlkoOfficial%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-      width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe> -->
     <p class="copyright">© Copyright 2019 Martin Ilko</p>
   </footer>
 
