Add night mode style sheet. Change <p> font from Manjari to Open Sans. Remove fb iframe.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
   <link rel="icon" href="images/favicon.ico">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
-
+  <!-- <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
   <!-- CSS StyleSheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/style-night.css"> -->
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/7d6fbde894.js"></script>
@@ -28,6 +26,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+  <noscript><link href="main.css" rel="stylesheet"></noscript>
 
   <title>Martin Ilko</title>
 
@@ -86,7 +85,7 @@
         <img class="pipe-organ-image" src="images/pipe-organ-square.png">
         <h2 class="section-heading">O mne</h2>
         <p class="section-p">Organu sa venujem od svojích 14 rokov. Študoval som na Katolíckej univerzite v Ružomberku, kde som získal veľa cenných skúseností a po ukončení štúdia aj magisterský titul v obore cirkevná hudba. Od roku 2017
-          pôsobím ako farský organista a zbormajster farského spevokolu <em>Cantus Gratus</em> pri kostole slovenskej rímsko-katolíckej farnosti sv. Jindřicha v Prahe.</p>
+          pôsobím ako farský organista a zbormajster farského spevokolu <em><a href="https://www.facebook.com/CantusGratus/" target="_blank">Cantus Gratus</a></em> pri kostole slovenskej rímsko-katolíckej farnosti sv. Jindřicha v Prahe.</p>
       </article>
   </section>
   </div>
@@ -98,22 +97,23 @@
 
     <div class="container-fluid">
       <h2 class="section-heading">Repertoár</h2>
-      <p class="section-p">Nižšie uvedené skladby patria k najviac hraným na svadobných obradoch. V prípade záujmu je možné sa na repertoári dohodnúť, nie je problém naštudovať akúkoľvek skladbu; avšak za predpokladu, že výber zodpovedá dôstojnosti priestoru.</p>
+      <p class="section-p">Nižšie uvedené skladby patria k najviac hraným na svadobných obradoch. V prípade záujmu je možné sa na repertoári dohodnúť, nie je problém naštudovať akúkoľvek skladbu; avšak za predpokladu, že výber zodpovedá dôstojnosti
+        priestoru.</p>
 
-        <ul class="repertoire-list">
-          <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫</a> Autumn (Vivaldi)</li>
-          <li><a href="https://www.youtube.com/watch?v=2TFeSYw0WeI" target="_blank">♫</a> Ave Maria (Bach/Gounod)</li>
-          <li><a href="https://www.youtube.com/watch?v=gfFpHArBxQU" target="_blank">♫</a> Ave Maria (Schubert)</li>
-          <li><a href="https://www.youtube.com/watch?v=uO1g8LjOWsk" target="_blank">♫</a> Largo (Handel)</li>
-          <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫</a> Nebeští kavalérové (Michna)</li>
-          <li><a href="https://www.youtube.com/watch?v=k43-BDXt0GU" target="_blank">♫</a> Nun danket alle Gott (Karg-Ellert)</li>
-          <li><a href="https://www.youtube.com/watch?v=fB_b9O8TxWg" target="_blank">♫</a> Preludium C major (Bach)</li>
-          <li><a href="https://www.youtube.com/watch?v=1z01NvQB2YE" target="_blank">♫</a> Preludium D minor (Bach)</li>
-          <li><a href="https://www.youtube.com/watch?v=4tDYMayp6Dk" target="_blank">♫</a> Svadobný pochod (Mendelssohn-Bartholdy)</li>
-          <li><a href="https://www.youtube.com/watch?v=P6rX3wlDsVI" target="_blank">♫</a> Svadobný pochod (Wagner)</li>
-          <li><a href="https://www.youtube.com/watch?v=-ui5_MP3Vws" target="_blank">♫</a> Te Deum (Charpentier)</li>
-          <li><a href="https://www.youtube.com/watch?v=D5j8jUa_M8I" target="_blank">♫</a> Trumpet Voluntary (Clarke)</li>
-        </ul>
+      <ul class="repertoire-list">
+        <li><a href="https://www.youtube.com/watch?v=2TFeSYw0WeI" target="_blank">♫</a> Ave Maria (Bach/Gounod)</li>
+        <li><a href="https://www.youtube.com/watch?v=gfFpHArBxQU" target="_blank">♫</a> Ave Maria (Schubert)</li>
+        <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫</a> Jeseň (Vivaldi)</li>
+        <li><a href="https://www.youtube.com/watch?v=uO1g8LjOWsk" target="_blank">♫</a> Largo (Handel)</li>
+        <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫</a> Nebeští kavalérové (Michna)</li>
+        <li><a href="https://www.youtube.com/watch?v=k43-BDXt0GU" target="_blank">♫</a> Nun danket alle Gott (Karg-Ellert)</li>
+        <li><a href="https://www.youtube.com/watch?v=fB_b9O8TxWg" target="_blank">♫</a> Preludium C major (Bach)</li>
+        <li><a href="https://www.youtube.com/watch?v=1z01NvQB2YE" target="_blank">♫</a> Preludium D minor (Bach)</li>
+        <li><a href="https://www.youtube.com/watch?v=4tDYMayp6Dk" target="_blank">♫</a> Svadobný pochod (Mendelssohn-Bartholdy)</li>
+        <li><a href="https://www.youtube.com/watch?v=P6rX3wlDsVI" target="_blank">♫</a> Svadobný pochod (Wagner)</li>
+        <li><a href="https://www.youtube.com/watch?v=-ui5_MP3Vws" target="_blank">♫</a> Te Deum (Charpentier)</li>
+        <li><a href="https://www.youtube.com/watch?v=D5j8jUa_M8I" target="_blank">♫</a> Trumpet Voluntary (Clarke)</li>
+      </ul>
 
   </section>
 
@@ -129,8 +129,8 @@
 
 
   <footer id="footer">
-    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMartinIlkoOfficial%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-      width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    <!-- <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMartinIlkoOfficial%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+      width="340" height="130" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe> -->
 
     <div class="social-media">
       <a class="social-icon fab fa-facebook-f" href="https://www.facebook.com/MartinIlkoOfficial/" target="_blank"></a>
