--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <noscript><link href="main.css" rel="stylesheet"></noscript>
+  <noscript>
+    <link href="main.css" rel="stylesheet"></noscript>
 
   <title>Martin Ilko</title>
 
@@ -85,7 +86,7 @@
         <img class="pipe-organ-image" src="images/pipe-organ-square.png">
         <h2 class="section-heading">O mne</h2>
         <p class="section-p">Organu sa venujem od svojích 14 rokov. Študoval som na Katolíckej univerzite v Ružomberku, kde som získal veľa cenných skúseností a po ukončení štúdia aj magisterský titul v obore cirkevná hudba. Od roku 2017
-          pôsobím ako farský organista a zbormajster farského spevokolu <em><a href="https://www.facebook.com/CantusGratus/" target="_blank">Cantus Gratus</a></em> pri kostole slovenskej rímsko-katolíckej farnosti sv. Jindřicha v Prahe.</p>
+          pôsobím ako hlavný farský organista a zbormajster farského spevokolu <em><a href="https://www.facebook.com/CantusGratus/" target="_blank">Cantus Gratus</a></em> v kostole slovenskej rímsko-katolíckej farnosti sv. Jindřicha v Prahe.</p>
       </article>
   </section>
   </div>
@@ -98,7 +99,7 @@
     <div class="container-fluid">
       <h2 class="section-heading">Repertoár</h2>
       <p class="section-p">Nižšie uvedené skladby patria k najviac hraným na svadobných obradoch. V prípade záujmu je možné sa na repertoári dohodnúť, nie je problém naštudovať akúkoľvek skladbu; avšak za predpokladu, že výber zodpovedá dôstojnosti
-        priestoru.</p>
+        priestoru.<br>Pre spestrenie je takisto možné prizvať ďalšieho hudobníka so sólovým nástrojom, napr.: spev, husle, trúbka, priečna flauta, a pod.</p>
 
       <ul class="repertoire-list">
         <li><a href="https://www.youtube.com/watch?v=2TFeSYw0WeI" target="_blank">♫</a> Ave Maria (Bach/Gounod)</li>
@@ -115,6 +116,8 @@
         <li><a href="https://www.youtube.com/watch?v=D5j8jUa_M8I" target="_blank">♫</a> Trumpet Voluntary (Clarke)</li>
       </ul>
 
+      <p>(*Kliknutím na notu ♫ prehráte zvukovú ukážku.)</p>
+
   </section>
 
   <hr>
@@ -123,7 +126,7 @@
     <article class="container-fluid">
       <h2 class="section-heading">Kontakt</h2>
       <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, v prípade záujmu ma prosím kontaktujte.</p>
-      <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg shadow-none">CONTACT ME</a>
+      <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg shadow-none">NAPÍŠTE MI</a>
     </article>
   </section>
 
@@ -141,9 +144,9 @@
     <p class="copyright">© Copyright 2019 Martin Ilko</p>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="js/script.js"></script>
 </body>
 
