Change Open Sans to Varela Round <p> font style.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 
   <!-- CSS StyleSheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -26,6 +25,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+  <!-- JavaScript -->
+  <script src="js/script.js"></script>
   <noscript>
     <link href="main.css" rel="stylesheet"></noscript>
 
@@ -66,7 +67,6 @@
 
   <section id="title">
 
-
     <div class="container-fluid">
       <div class="top-container">
 
@@ -74,7 +74,6 @@
       </div>
 
     </div>
-
 
   </section>
 
@@ -125,7 +124,7 @@
   <section id="contact">
     <article class="container-fluid">
       <h2 class="section-heading">Kontakt</h2>
-      <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, v prípade záujmu ma prosím kontaktujte.</p>
+      <p class="section-p">Rád svojou hrou prispejem k spríjemneniu výnimočných udalostí, neváhajte ma prosím kontaktovať.</p>
       <a href="mailto:martin.ilko@gmail.com" class="mailto-button btn btn-primary btn-lg shadow-none">NAPÍŠTE MI</a>
     </article>
   </section>
@@ -144,7 +143,6 @@
     <p class="copyright">© Copyright 2019 Martin Ilko</p>
   </footer>
 
-  <script src="js/script.js"></script>
 </body>
 
 </html>
