--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- CSS StyleSheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="css/style-night.css"> -->
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/7d6fbde894.js"></script>
@@ -25,18 +25,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <!-- JavaScript -->
-  <script src="js/script.js"></script>
-  <noscript>
-    <link href="main.css" rel="stylesheet"></noscript>
-
   <title>Martin Ilko</title>
 
 </head>
 
 <body>
-
-
 
   <!-- NavBar -->
 
@@ -63,7 +56,9 @@
       </ul>
 
     </div>
+
   </nav>
+
 
   <section id="title">
 
@@ -93,6 +88,7 @@
 
   <hr>
 
+
   <section id="repertoire">
 
     <div class="container-fluid">
@@ -119,7 +115,9 @@
 
   </section>
 
+
   <hr>
+
 
   <section id="contact">
     <article class="container-fluid">
@@ -142,6 +140,8 @@
     </div>
     <p class="copyright">© Copyright 2019 Martin Ilko</p>
   </footer>
+
+  <script src="js/script.js"></script>
 
 </body>
 
