Update copyright with js year.

--- a/index.html
+++ b/index.html
@@ -97,21 +97,19 @@
         priestoru.<br>Pre spestrenie je takisto možné prizvať ďalšieho hudobníka so sólovým nástrojom, napr.: spev, husle, trúbka, priečna flauta, a pod.</p>
 
       <ul class="repertoire-list">
-        <li><a href="https://www.youtube.com/watch?v=2TFeSYw0WeI" target="_blank">♫</a> Ave Maria (Bach/Gounod)</li>
-        <li><a href="https://www.youtube.com/watch?v=gfFpHArBxQU" target="_blank">♫</a> Ave Maria (Schubert)</li>
-        <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫</a> Jeseň (Vivaldi)</li>
-        <li><a href="https://www.youtube.com/watch?v=uO1g8LjOWsk" target="_blank">♫</a> Largo (Handel)</li>
-        <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫</a> Nebeští kavalérové (Michna)</li>
-        <li><a href="https://www.youtube.com/watch?v=k43-BDXt0GU" target="_blank">♫</a> Nun danket alle Gott (Karg-Ellert)</li>
-        <li><a href="https://www.youtube.com/watch?v=fB_b9O8TxWg" target="_blank">♫</a> Preludium C major (Bach)</li>
-        <li><a href="https://www.youtube.com/watch?v=1z01NvQB2YE" target="_blank">♫</a> Preludium D minor (Bach)</li>
-        <li><a href="https://www.youtube.com/watch?v=4tDYMayp6Dk" target="_blank">♫</a> Svadobný pochod (Mendelssohn-Bartholdy)</li>
-        <li><a href="https://www.youtube.com/watch?v=P6rX3wlDsVI" target="_blank">♫</a> Svadobný pochod (Wagner)</li>
-        <li><a href="https://www.youtube.com/watch?v=-ui5_MP3Vws" target="_blank">♫</a> Te Deum (Charpentier)</li>
-        <li><a href="https://www.youtube.com/watch?v=D5j8jUa_M8I" target="_blank">♫</a> Trumpet Voluntary (Clarke)</li>
+        <li><a href="https://www.youtube.com/watch?v=2TFeSYw0WeI" target="_blank">♫ Ave Maria (Bach/Gounod)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=gfFpHArBxQU" target="_blank">♫ Ave Maria (Schubert)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫ Jeseň (Vivaldi)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=uO1g8LjOWsk" target="_blank">♫ Largo (Handel)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫ Nebeští kavalérové (Michna</a>)</li>
+        <li><a href="https://www.youtube.com/watch?v=k43-BDXt0GU" target="_blank">♫ Nun danket alle Gott (Karg-Ellert)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=fB_b9O8TxWg" target="_blank">♫ Preludium C major (Bach)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=1z01NvQB2YE" target="_blank">♫ Preludium D minor (Bach)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=4tDYMayp6Dk" target="_blank">♫ Svadobný pochod (Mendelssohn-Bartholdy)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=P6rX3wlDsVI" target="_blank">♫ Svadobný pochod (Wagner)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=-ui5_MP3Vws" target="_blank">♫ Te Deum (Charpentier)</a></li>
+        <li><a href="https://www.youtube.com/watch?v=D5j8jUa_M8I" target="_blank">♫ Trumpet Voluntary (Clarke)</a></li>
       </ul>
-
-      <p>(*Kliknutím na notu ♫ prehráte zvukovú ukážku.)</p>
 
   </section>
 
@@ -138,8 +136,7 @@
       <a class="social-icon fas fa-envelope" href="mailto:martin.ilko@gmail.com" target="_blank"></a>
       <a class="social-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/martin-ilko-a6a435168/" target="_blank"></a>
     </div>
-    <p class="copyright">© Copyright 2019 Martin Ilko</p>
-  </footer>
+    <p class="copyright">© <script type="text/javascript">document.write(new Date().getFullYear());</script> Martin Ilko Design</p></footer>
 
   <script src="js/script.js"></script>
 
