--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <li><a href="https://www.youtube.com/watch?v=gfFpHArBxQU" target="_blank">♫ Ave Maria (Schubert)</a></li>
         <li><a href="https://www.youtube.com/watch?v=8Ss3zHwXkFI" target="_blank">♫ Jeseň (Vivaldi)</a></li>
         <li><a href="https://www.youtube.com/watch?v=uO1g8LjOWsk" target="_blank">♫ Largo (Handel)</a></li>
-        <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫ Nebeští kavalérové (Michna</a>)</li>
+        <li><a href="https://www.youtube.com/watch?v=cb86fVwf3aw" target="_blank">♫ Nebeští kavalérové (Michna)</a></li>
         <li><a href="https://www.youtube.com/watch?v=k43-BDXt0GU" target="_blank">♫ Nun danket alle Gott (Karg-Ellert)</a></li>
         <li><a href="https://www.youtube.com/watch?v=fB_b9O8TxWg" target="_blank">♫ Preludium C major (Bach)</a></li>
         <li><a href="https://www.youtube.com/watch?v=1z01NvQB2YE" target="_blank">♫ Preludium D minor (Bach)</a></li>
