Add phone instead of linkedin

--- a/index.html
+++ b/index.html
@@ -133,10 +133,13 @@
     <div class="social-media">
       <a class="social-icon fab fa-facebook-f" href="https://www.facebook.com/MartinIlkoOfficial/" target="_blank"></a>
       <a class="social-icon fab fa-youtube" href="https://www.youtube.com/martinilko" target="_blank"></a>
-      <a class="social-icon fas fa-envelope" href="mailto:martin.ilko@gmail.com" target="_blank"></a>
-      <a class="social-icon fab fa-linkedin-in" href="https://www.linkedin.com/in/martin-ilko-a6a435168/" target="_blank"></a>
+      <a class="social-icon fas fa-envelope" href="mailto:martin.ilko@gmail.com"></a>
+      <a class="social-icon fas fa-phone" href="tel:+420778048910"></a>
     </div>
-    <p class="copyright">© <script type="text/javascript">document.write(new Date().getFullYear());</script> Martin Ilko Design</p></footer>
+    <p class="copyright">© <script type="text/javascript">
+        document.write(new Date().getFullYear());
+      </script> Martin Ilko Design</p>
+  </footer>
 
   <script src="js/script.js"></script>
 
