Change copyright text.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <p class="copyright">© <script type="text/javascript">
         document.write(new Date().getFullYear());
-      </script> Martin Ilko Design</p>
+      </script> -im- design</p>
   </footer>
 
   <script src="js/script.js"></script>
