New look initial.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <div class="container-fluid">
       <div class="top-container">
 
-        <h1 class="title-heading">Ahoj!<br>som Martin,<br>organista.</h1>
+        <h1 class="title-heading">MARTIN ILKO</h1>
+        <img class="pipe-organ-image" src="images/pipe-organ-square.png">
+
       </div>
 
     </div>
